--- a/openstack-deployment.yaml
+++ b/openstack-deployment.yaml
@@ -1,47 +1,25 @@
 inputs:
   #############################
-  # Provider specific Inputs
+  # Deployment specific Inputs
   #############################
-  keystone_username:
-    default: 'user'
-    type: string
-
-  keystone_password:
-    default: 'password'
-    type: string
-
-  keystone_tenant_name:
-    default: 'demo'
-    type: string
-
-  keystone_url:
-    default: 'http://10.0.200.229/identity/v3'
-    type: string
-
   image_id:
-    default: 'ad7c6774-125a-4ed9-844d-7a8f64bb13ea'
-    type: string
-
+    default: '<image id>'
   flavor_id:
-    default: 'm1.medium'
-    type: string
-
-  network_name:
-    default: 'public'
-    type: string
-
-  network_id:
-    default: '176c4f91-b690-4d8e-bbfc-4f862abb0d0d'
-    type: string
-
-  key_name:
-    default: 'sample'
-    type: string
-
-
-dsl_definitions:
-  openstack_config: &openstack_config
-        username: { get_input: keystone_username }
-        password: { get_input: keystone_password }
-        tenant_name: { get_input: keystone_tenant_name }
-        auth_url: { get_input: keystone_url }
+    default: '<flavor id>'
+  transport_network_name:
+    default: '<net name>'
+  #############################
+  # OpenStack credentials v3 auth
+  #############################
+  username:
+    default: 'XXXX'
+  password:
+    default: 'YYYY'
+  project_id:
+    default: 'ZZZZ'
+  auth_url:
+    default: 'https://IP:5000/v3/'
+  user_domain_name:
+    default: 'AAAA'
+  region:
+    default: 'RegionOne'
